[package]
name = "html_to_epub"
license = "MIT"
version = "0.1.3"
edition = "2018"
description = "A command line converts .html file to .epub file."
authors = ["John <igonejack@gmail.com>"]
repository = "https://github.com/gonejack/html_to_epub"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
getopts = "0.2"
epub-builder = "0.5"
visdom = { version = "0.5", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
