[package]
name = "html_to_epub"
license = "MIT"
version = "0.1.4"
edition = "2024"
description = "A command line converts .html file to .epub file."
authors = ["John <igonejack@gmail.com>"]
repository = "https://github.com/gonejack/html_to_epub"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "local-time"] }
time = { version = "0.3.47", features = ["macros"] }
nu-ansi-term = "0.50"
clap = { version = "4.6.1", features = ["derive"] }
epub-builder = "0.8.3"
visdom = { version = "1.0.4", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
